--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  	<section id="main">
  		<nav>
  			<a href="g" class="logo">
- 				<img src="file:///C:/Users/KRISHNA%20DHOBALE/Downloads/emoji-heart-eyes-fill.svg" alt="The logo of the project Rutu">
+ 				<img src="nsc/logo2.png" alt="The logo of the project Rutu">
  			</a>
  			<span class="menu-space"></span>
  			<ul class="menu">
