--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
  	<section class="Content">
  		<div class="image">
- 			<img src="D:\photos\Rutu\IMG_20191129_082553.JPG" alt="Rutu">
+ 			<img src="https://www.computerhope.com/jargon/h/html.png" alt="Rutu">
  		</div>
  		<div class="main-text">
  			<h1>Hello , I am RUTU</h1>
