--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
  	<section class="Content">
  		<div class="image">
- 			<img src="https://www.computerhope.com/jargon/h/html.png" alt="Rutu">
+ 			<img src="![IMG_20191129_082553](https://user-images.githubusercontent.com/83323887/116496325-6c5ba800-a8c2-11eb-8fa8-d8ab7d0ca8be.JPG)" alt="Rutu">
  		</div>
  		<div class="main-text">
  			<h1>Hello , I am RUTU</h1>
