--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
  	<section class="Content">
  		<div class="image">
- 			<img src="https://user-images.githubusercontent.com/79679349/116496591-09b6dc00-a8c3-11eb-9439-55452588b338.JPG" alt="Rutu">
+ 			<img src="https://github.com/rutu6330/rutu6330.github.io/issues/1#issue-870565419" alt="Rutu">
  		</div>
  		<div class="main-text">
  			<h1>Hello , I am RUTU</h1>
