--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  	<section id="main">
  		<nav>
  			<a href="g" class="logo">
- 				<img src="https://github.com/rutu6330/rutu6330.github.io/issues/1#issuecomment-828909286" alt="The logo of the project Rutu">
+ 				<img src="img.png" alt="The logo of the project Rutu">
  			</a>
  			<span class="menu-space"></span>
  			<ul class="menu">
