--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
  	<section class="Content">
  		<div class="image">
- 			<img src="https://github.com/rutu6330/rutu6330.github.io/issues/2#issue-870569698" alt="Rutu">
+ 			<img src="https://user-images.githubusercontent.com/83323887/116497929-286aa200-a8c6-11eb-973a-645abb9c62aa.JPG" alt="Rutu">
  		</div>
  		<div class="main-text">
  			<h1>Hello , I am RUTU</h1>
