--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  	<section id="main">
  		<nav>
  			<a href="g" class="logo">
- 				<img src="img.png" alt="The logo of the project Rutu">
+ 				<img src="https://user-images.githubusercontent.com/83323887/116503074-d54b1c00-a8d2-11eb-8c12-39acd4ccf9fe.jpg" alt="The logo of the project Rutu">
  			</a>
  			<span class="menu-space"></span>
  			<ul class="menu">
